Fixed depreciated methods to work with latest Eclipse/Java